--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,16 +41,14 @@ jobs:
          # The SQL command to update the table. You should replace this with
           your actual SQL command.
 
-          SQL_COMMAND="INSERT INTO public.people (First_Name, Last_Name) VALUES
-          ('Berry', 'Tzakala');"
+          SQL_COMMAND="INSERT INTO public.people (First_Name, Last_Name) VALUES ('Berry', 'Tzakala');"
 
           # Use PGPASSWORD to pass the password, then run psql to execute your
           SQL command
 
           export PGPASSWORD=$DB_PASS
 
-          psql -h "$DB_HOST" -p "$DB_PORT" -d "$DB_NAME" -U "$DB_USER" -c
-          "$SQL_COMMAND"
+          psql -h "$DB_HOST" -p "$DB_PORT" -d "$DB_NAME" -U "$DB_USER" -c "$SQL_COMMAND"
 
           # unset the PGPASSWORD after use for security reasons
 
