--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           access-id: '${{ secrets.ACCESS_ID }}'
           dynamic-secrets: |
-            - name: "/github_action/postgres_DS"
+            - name: "/jenkins/postgresds"
               output-name: "postgres_dynamic_secret"
           access-type: jwt
           export-secrets-to-outputs: true
